[gd_scene load_steps=17 format=2]

[ext_resource path="res://Prefabs/Templates/Prefab_PlayerGraphic.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PlayerCharacter.gd" type="Script" id=2]
[ext_resource path="res://Textures/UI/tex_ui_playerFacing.png" type="Texture" id=3]
[ext_resource path="res://addons/RandomAudioNodePlayer/RandomAudioNodePlayer.gd" type="Script" id=4]
[ext_resource path="res://Sound Effects/Sound_Player_Hurt_2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sound Effects/Sound_Player_Hurt_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sound Effects/Sound_Player_HurtAccent_2.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sound Effects/Sound_Player_HurtAccent_3.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sound Effects/Sound_Player_HurtAccent_1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sound Effects/Sound_Player_HurtAccent_4.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sound Effects/Sound_Player_HurtAccent_5.ogg" type="AudioStream" id=11]
[ext_resource path="res://Textures/UI/tex_ui_playerFacingLock.png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 40.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.388235, 0.607843, 1, 1 )
border_width_top = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.494118, 0.984314, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Graphic" parent="." instance=ExtResource( 1 )]

[node name="EnemyCollision" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="EnemyCollision"]
position = Vector2( 0, -16 )
shape = SubResource( 4 )

[node name="ItemCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 5 )

[node name="FacingArrow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_bottom = -25.0

[node name="Sprite" type="Sprite" parent="FacingArrow"]
position = Vector2( 89, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="FacingArrowLock" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 89, -25 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="HPBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -80.0
margin_right = 32.0
margin_bottom = -72.0
mouse_filter = 2
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="HurtSound" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Audio1" type="AudioStreamPlayer" parent="HurtSound"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Audio2" type="AudioStreamPlayer" parent="HurtSound"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="HurtAccentSound" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Audio1" type="AudioStreamPlayer" parent="HurtAccentSound"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Audio2" type="AudioStreamPlayer" parent="HurtAccentSound"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Audio3" type="AudioStreamPlayer" parent="HurtAccentSound"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Audio4" type="AudioStreamPlayer" parent="HurtAccentSound"]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Audio5" type="AudioStreamPlayer" parent="HurtAccentSound"]
stream = ExtResource( 11 )
volume_db = -10.0

[editable path="Graphic"]
